--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,22 +6,22 @@ transport:
   name: sftp
 
 driver_config:
-    customize:
-#      cpus: 2
-      memory: 1024
+  cutomize:
+    # cpus: 2
+    memory: 1024
 
 provisioner:
   name: ansible_playbook
   roles_path: ../
   hosts: all
   ansible_verbose: true
-#  ansible_verbose: false
+  # ansible_verbose: false
   ansible_verbosity: 2
-#  ansible_version: 2.7.7
+  # ansible_version: 2.7.7
   ansible_extra_flags: <%= ENV['ANSIBLE_EXTRA_FLAGS'] %>
   ansible_cfg_path: test/vagrant/ansible.cfg
   require_ansible_omnibus: true
-#  require_chef_for_busser: false
+  # require_chef_for_busser: false
   enable_yum_epel: true
   ansible_connection: ssh
   ansible_omnibus_url: https://raw.githubusercontent.com/juju4/omnibus-ansible/master/ansible_install.sh
@@ -31,13 +31,12 @@ platforms:
   - name: ubuntu-18.04
   - name: centos-8
   - name: centos-7
-## httpd/centos7/capability issue on lxc
-## https://github.com/lxc/lxd/issues/1245	= only choice is privileged
-## https://bugzilla.redhat.com/show_bug.cgi?id=1012952
+    ## httpd/centos7/capability issue on lxc
+    ## https://github.com/lxc/lxd/issues/1245	= only choice is privileged
+    ## https://bugzilla.redhat.com/show_bug.cgi?id=1012952
     driver:
       config:
         security.privileged: true
-#  - name: alpine-3.4
 
 suites:
   - name: default
