--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -54,7 +54,7 @@ jobs:
       - name: idempotency run
         run: |
           cd $GITHUB_WORKSPACE/juju4.misp && ansible-playbook -i localhost, --connection=local --become -vvv test/integration/default/default.yml ${ANSIBLE_EXTRA_VARS} | tee /tmp/idempotency.log | grep -q 'changed=0.*failed=0'  && (echo 'Idempotence test: pass' && exit 0)  || (echo 'Idempotence test: fail' && cat /tmp/idempotency.log && exit 1)
-      - name: After script - rules
+      - name: After script - python
         run: |
           pip freeze
           pip3 freeze
