test/default: use lief 0.10.1 instead of recent 0.11 - <1min install vs 30min+

--- a/tasks/lief.yml
+++ b/tasks/lief.yml
@@ -10,6 +10,7 @@
   pip:
     name: lief
     state: present
+    version: "{{ misp_lief_version | default(omit) }}"
     virtualenv: "{{ misp_virtualenv }}"
     virtualenv_python: "{{ python3_bin }}"
   when: >
