test/default: use lief 0.10.1 instead of recent 0.11 - bionic only

--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -2,7 +2,6 @@
 
 - hosts: all
   vars:
-    - misp_lief_version: 0.10.1
     - misp_testing: true
     - misp_testing_user: _misp
     - misp_testing_user_home: "/home/{{ misp_testing_user }}"
@@ -26,6 +25,10 @@
         harden_php_allow_url_fopen: On
         harden_php_disable_functions: 'pcntl_alarm,pcntl_fork,pcntl_waitpid,pcntl_wait,pcntl_wifexited,pcntl_wifstopped,pcntl_wifsignaled,pcntl_wexitstatus,pcntl_wtermsig,pcntl_wstopsig,pcntl_signal,pcntl_signal_dispatch,pcntl_get_last_error,pcntl_strerror,pcntl_sigprocmask,pcntl_sigwaitinfo,pcntl_sigtimedwait,pcntl_exec,pcntl_getpriority,pcntl_setpriority,chown,diskfreespace,disk_free_space,disk_total_space,dl,exec,escapeshellarg,escapeshellcmd,fileinode,highlight_file,max_execution_time,passthru,pclose,phpinfo,popen,proc_nice,proc_terminate,set_time_limit,shell_exec,show_source,system,__construct, __destruct, __call,__wakeup'
       when: ansible_os_family == "RedHat" and ansible_distribution_version.split('.')[0] == '7'
+    - name: Bionic | set Lief version without compilation for test speed
+      set_fact:
+        misp_lief_version: 0.10.1
+      when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version|int == 18
   roles:
     # - geerlingguy.apache
     - juju4.harden_apache
